load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "planner",
    srcs = ["optimize.go"],
    importpath = "github.com/pingcap/tidb/planner",
    visibility = ["//visibility:public"],
    deps = [
        "//bindinfo",
        "//domain",
        "//infoschema",
        "//kv",
        "//metrics",
        "//parser",
        "//parser/ast",
        "//pkg/util/hint",
        "//pkg/util/intest",
        "//pkg/util/logutil",
        "//pkg/util/parser",
        "//pkg/util/topsql",
        "//planner/cascades",
        "//planner/core",
        "//planner/util/debugtrace",
        "//privilege",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//types",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@org_uber_go_zap//:zap",
    ],
)
