load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "plugin",
    srcs = [
        "audit.go",
        "const.go",
        "errors.go",
        "helper.go",
        "plugin.go",
        "spi.go",
    ],
    importpath = "github.com/pingcap/tidb/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//domain",
        "//errno",
        "//sessionctx/variable",
        "//util",
        "//util/dbterror",
        "//util/logutil",
        "//vendor/github.com/pingcap/errors",
        "//vendor/go.etcd.io/etcd/client/v3:client",
        "//vendor/go.uber.org/zap",
    ],
)

go_test(
    name = "plugin_test",
    timeout = "short",
    srcs = [
        "const_test.go",
        "helper_test.go",
        "integration_test.go",
        "main_test.go",
        "plugin_test.go",
        "spi_test.go",
    ],
    embed = [":plugin"],
    flaky = True,
    deps = [
        "//kv",
        "//server",
        "//session",
        "//sessionctx/variable",
        "//testkit",
        "//testkit/testsetup",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.uber.org/goleak",
    ],
)
